[gd_scene load_steps=20 format=3 uid="uid://bkofbhc4rm267"]

[ext_resource type="Script" path="res://20241108_16_50_gamesa.gd" id="1_rn371"]
[ext_resource type="Texture2D" uid="uid://dtbbtqmugvndg" path="res://Untitled (33) OK.png" id="2_irjsv"]
[ext_resource type="Texture2D" uid="uid://d0h5h3a4ji3bw" path="res://food_01.png" id="3_rtb52"]
[ext_resource type="Texture2D" uid="uid://cd444f3kjh2ef" path="res://food_02.png" id="4_fwi8h"]
[ext_resource type="Script" path="res://character_body_2d.gd" id="5_wo5i5"]
[ext_resource type="Texture2D" uid="uid://bbaoljdl2eq5n" path="res://Fairy-Tiny-Style-2D-Character-Sprites static.png" id="6_jlpr7"]
[ext_resource type="Script" path="res://timer.gd" id="7_eupdj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7rpd3"]
size = Vector2(1807.66, 175.627)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35xy1"]
size = Vector2(956, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6vfl"]
size = Vector2(928, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7ljy"]
size = Vector2(891, 118)

[sub_resource type="CircleShape2D" id="CircleShape2D_81fpv"]
radius = 123.466

[sub_resource type="CircleShape2D" id="CircleShape2D_8p4ot"]
radius = 140.605

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u3rlq"]
size = Vector2(1149, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xhr5"]
size = Vector2(1054.25, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mcwcj"]
size = Vector2(1072, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hbcul"]
size = Vector2(1008, 26.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6r30n"]
size = Vector2(968, 27.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_schc4"]
radius = 45.0694

[node name="Node2D" type="Node2D"]
script = ExtResource("1_rn371")

[node name="Sprite2D_background" type="Sprite2D" parent="."]
texture = ExtResource("2_irjsv")

[node name="Area2D_platform_2" type="Area2D" parent="."]
position = Vector2(-209, 7)
scale = Vector2(0.555413, 0.7796)

[node name="prostor" type="CollisionShape2D" parent="Area2D_platform_2"]
position = Vector2(383.498, 84.0694)
shape = SubResource("RectangleShape2D_7rpd3")

[node name="Area2D_platform_3" type="Area2D" parent="."]

[node name="prostor" type="CollisionShape2D" parent="Area2D_platform_3"]
position = Vector2(10, -103)
shape = SubResource("RectangleShape2D_35xy1")

[node name="Area2D_platform_4" type="Area2D" parent="."]

[node name="prostor" type="CollisionShape2D" parent="Area2D_platform_4"]
position = Vector2(14, -263.5)
shape = SubResource("RectangleShape2D_r6vfl")

[node name="Area2D_platform_5" type="Area2D" parent="."]

[node name="prostor" type="CollisionShape2D" parent="Area2D_platform_5"]
position = Vector2(21.5, -425)
shape = SubResource("RectangleShape2D_t7ljy")

[node name="Area2D_food_02" type="Area2D" parent="."]
position = Vector2(-20, -16)

[node name="Sprite2D2_food_02" type="Sprite2D" parent="Area2D_food_02"]
position = Vector2(354, 246)
scale = Vector2(0.178371, 0.178371)
texture = ExtResource("3_rtb52")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_food_02"]
position = Vector2(354, 246)
scale = Vector2(0.178371, 0.178371)
shape = SubResource("CircleShape2D_81fpv")

[node name="Area2D_food_01" type="Area2D" parent="."]
position = Vector2(-200, -13)

[node name="Sprite2D2_food_01" type="Sprite2D" parent="Area2D_food_01"]
position = Vector2(355, 240)
scale = Vector2(0.178371, 0.178371)
texture = ExtResource("4_fwi8h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_food_01"]
position = Vector2(355, 242)
scale = Vector2(0.178371, 0.178371)
shape = SubResource("CircleShape2D_8p4ot")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-346, 270)

[node name="CollisionShape2D_prava" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(856.499, -431.524)
rotation = -1.65453
shape = SubResource("RectangleShape2D_u3rlq")

[node name="CollisionShape2D_leva" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-150, -413)
rotation = -1.42314
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_u3rlq")

[node name="CollisionShape2D_P1" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(352, 96)
shape = SubResource("RectangleShape2D_u3rlq")

[node name="CollisionShape2D_P2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(344, -107)
rotation = 3.14159
shape = SubResource("RectangleShape2D_0xhr5")
one_way_collision = true

[node name="CollisionShape2D_P3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(352, -286.5)
rotation = 3.14159
shape = SubResource("RectangleShape2D_mcwcj")
one_way_collision = true

[node name="CollisionShape2D_P4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(371, -457.25)
rotation = 3.14159
shape = SubResource("RectangleShape2D_hbcul")
one_way_collision = true

[node name="CollisionShape2D_P5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(363, -612.625)
rotation = 3.14159
shape = SubResource("RectangleShape2D_6r30n")
one_way_collision = true

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(62, 246)
safe_margin = 13.341
script = ExtResource("5_wo5i5")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(-35, 6)
zoom = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(-34, 5)
scale = Vector2(0.601373, 0.601373)
texture = ExtResource("6_jlpr7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-37, 8)
shape = SubResource("CircleShape2D_schc4")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
script = ExtResource("7_eupdj")

[connection signal="body_entered" from="Area2D_platform_2" to="CharacterBody2D" method="_on_area_2d_platform_2radsinova_body_entered"]
[connection signal="body_entered" from="Area2D_platform_3" to="CharacterBody2D" method="_on_area_2d_platform_3_body_entered"]
[connection signal="body_entered" from="Area2D_platform_4" to="CharacterBody2D" method="_on_area_2d_platform_4_body_entered"]
[connection signal="body_entered" from="Area2D_platform_5" to="CharacterBody2D" method="_on_area_2d_platform_5_body_entered"]
[connection signal="body_entered" from="Area2D_food_02" to="CharacterBody2D" method="_on_area_2d_food_02_body_entered"]
[connection signal="body_entered" from="Area2D_food_01" to="CharacterBody2D" method="_on_area_2d_food_01_body_entered"]
